# jube_lcp

./: .gitignore  README.md  check_misc.py  conllu_output.conllu  elan_to_tables.py  meta.json  pyproject.toml  setup.py  xml_to_conllu.py
conllu_files/: conllu_output.conllu  global_attribute_speaker.tsv
input/: conllu_output.conllu  global_attribute_speaker.csv  meta.json
jube_prep/: __init__.py  jube_builder.py  utils.py  xml_to_conllu.py
my_output/: document.csv  fts_vector.csv  global_attribute_speaker.tsv  segment.csv  token_form.csv
output/: clip.csv  config.json  document.csv  fts_vector.csv  global_attribute_speaker.csv  global_attribute_speaker.tsv  meta.json  recording.csv  segment.csv  sentence.csv  sentence_original.csv  token.csv  token_form.csv  token_lemma.csv  token_misc.csv  word_form.csv
