[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jube_prep"
version = "1.0.0b1"
description = "Conversion of JuBe Corpus for submission to LiRI Corpus Platform (LCP)" 
readme = "README.md" 
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Alexandru Craevschi", email = "craevschi.alexandru@gmail.com"}, 
]


dependencies = [
    "numpy==2.2.4",
    "pandas==2.2.3",
    "pytz==2025.1",
    "six==1.17.0",
    "tzdata==2025.1",
    "lcpcli==0.2.5",
    "tqdm",
]

[project.scripts]
jube_prep = "jube_prep.jube_builder:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
